docs: update release checklist

--- a/docs/how_to_make_a_tahoe-lafs_release.org
+++ b/docs/how_to_make_a_tahoe-lafs_release.org
@@ -1,44 +1,44 @@
 ﻿* Tahoe Release Checklist [0/19]
+  - [ ] make sure buildbot, travis, appveyor are green
   - [ ] NEWS.rst: summarize user-visible changes, aim for one page of text
   - [ ] update doc files
     - NEWS.rst: Add final release name and date to top-most item in NEWS.
     - relnotes.txt
     - CREDITS
     - docs/known_issues.rst
-  - [ ] change docs/quickstart.rst to point to just the current
-    tahoe-lafs-X.Y.Z.zip source code file, or else to point to a
-    directory which contains only tahoe-lafs-X.Y.Z.* source code files
-  - [ ] git pull
-  - [ ] git tag -s -u 68666A7A tahoe-lafs-X.Y.Z
+  - [ ] change docs/INSTALL.rst to point to just the current
+    tahoe-lafs-X.Y.Z.tar.gz source code file
+  - [ ] announce the tree is locked on IRC
+  - [ ] git pull, should be empty
+  - [ ] git tag -s -u 68666A7A -m "release Tahoe-LAFS-X.Y.Z" tahoe-lafs-X.Y.Z
     - produces a "signed tag"
-    - tag body: tahoe-lafs-X.Y.Z
   - [ ] build locally to make sure the release is reporting itself as the
-    intended version
-  - [ ] make sure buildbot is green
-  - [ ] make sure other people aren't committing at that moment
+    intended version, make tarballs too (for comparison only)
   - [ ] push tag to trigger buildslaves. Making a code change is no longer
     necessary
     - git push official master TAGNAME
     - that will build tarballs
   - [ ] make sure buildbot is green
-  - [ ] make sure a sumo sdist tarball got built and uploaded properly
-  - [ ] download tarballs, sign with "gpg -ba -u 68666a7a TAR", upload *.asc
-  - [ ] symlink the release tarball on tahoe-lafs.org:
-    /var/www/source/tahoe-lafs/releases/
-  - [ ] update Wiki: front page news, news, old news, parade of release
-    notes ("Doc"), Installation
+  - [ ] download tarballs+wheels
+  - [ ] announce tree is unlocked
+  - [ ] compare tarballs+wheels against local copies (but sign upstreams)
+  - [ ] sign each with "gpg -ba -u 68666a7a FILE"
+  - [ ] twine register dist/FILE
+  - [ ] twine upload dist/*
+  - [ ] test "pip install tahoe-lafs" (from PyPI)
+  - [ ] upload *.asc to org ~source/downloads/
+  - [ ] copy the release tarball,sigs to tahoe-lafs.org: ~source/downloads/
+  - [ ] move old release out of ~source/downloads (to downloads/old/?)
+  - [ ] update Wiki front page: download link, front page news, news, old news
   - [ ] send out relnotes.txt:
-    - modify to include hashes of tarballs, git revision
+    - add prefix with SHA256 of tarballs, release pubkey, git revhash
     - GPG-sign the email
     - send to tahoe-announce@tahoe-lafs.org and tahoe-dev@tahoe-lafs.org
-  - [ ] update https://tahoe-lafs.org/hacktahoelafs/
-  - [ ] update pypi:
-    - python setup.py register
-    - login to pypi
-    - manually upload .tar.gz tarball and .asc signature (so they match the
-      ones on tahoe-lafs.org), or use https://pypi.python.org/pypi/twine and
-      run "twine upload *.tar.gz *.asc"
+  - [ ] update Wiki "Doc": parade of release notes, Installation (with link
+    to tahoe-dev email)
   - [ ] close the Milestone on the trac Roadmap
+  - [ ] tweet to @tahoelafs
+  - [ ] update https://tahoe-lafs.org/hacktahoelafs/
   - [ ] make an "announcement of new release" on freshmeat
   - [ ] make an "announcement of new release" on launchpad
   - [ ] send out relnotes.txt to:
