--- a/docs/how_to_make_a_tahoe-lafs_release.org
+++ b/docs/how_to_make_a_tahoe-lafs_release.org
@@ -29,15 +29,15 @@
   - [ ] upload *.asc to org ~source/downloads/
   - [ ] copy the release tarball,sigs to tahoe-lafs.org: ~source/downloads/
   - [ ] move old release out of ~source/downloads (to downloads/old/?)
-  - [ ] update Wiki front page: download link, front page news, news, old news
   - [ ] send out relnotes.txt:
     - add prefix with SHA256 of tarballs, release pubkey, git revhash
-    - GPG-sign the email
+    - GPG-sign the email with release key
     - send to tahoe-announce@tahoe-lafs.org and tahoe-dev@tahoe-lafs.org
-  - [ ] update Wiki "Doc": parade of release notes, Installation (with link
-    to tahoe-dev email)
+  - [ ] update Wiki front page: version on download link, News column
+  - [ ] update Wiki "Doc": parade of release notes (with rev of NEWS.rst)
   - [ ] close the Milestone on the trac Roadmap
   - [ ] tweet to @tahoelafs
+  - other stuff:
   - [ ] update https://tahoe-lafs.org/hacktahoelafs/
   - [ ] make an "announcement of new release" on freshmeat
   - [ ] make an "announcement of new release" on launchpad
