--- a/docs/how_to_make_a_tahoe-lafs_release.org
+++ b/docs/how_to_make_a_tahoe-lafs_release.org
@@ -1,8 +1,8 @@
-﻿* select features/PRs for new release [0/]
+﻿* select features/PRs for new release [0/2]
   - [ ] made sure they are tagged/labeled
   - [ ] merged all release PRs
 
-* basic quality checks [0/]
+* basic quality checks [0/3]
   - [ ] all travis CI checks pass
   - [ ] all appveyor checks pass
   - [ ] all buildbot workers pass their checks
@@ -10,7 +10,7 @@
 * freeze master branch [0/]
   - [ ] announced the freeze of the master branch on IRC (i.e. non-release PRs won't be merged until after release)
 
-* sync documentation [0/]
+* sync documentation [0/7]
   - [ ] NEWS.rst: summarize user-visible changes, aim for one page of text
   - [ ] added final release name and date to top-most item in NEWS.rst
   - [ ] updated relnotes.txt
@@ -19,17 +19,18 @@
   - [ ] docs/INSTALL.rst only points to current tahoe-lafs-X.Y.Z.tar.gz source code file
   - [ ] updated https://tahoe-lafs.org/hacktahoelafs/
 
-* sign the tag [0/]
+* sign the tag [0/8]
 
   - [ ] code passes all checks / tests (i.e. all CI is green)
   - [ ] documentation is ready (see above)
-  - [ ] build code locally:
-     tox -e py27,codechecks,coverage,deprecations,docs,integration,tarballs,upcoming-deprecations
-  - [ ] release version is reporting itself as intended version
-  - [ ] created tarballs (for later comparision)
-  - [ ] 'git pull' doesn't pull anything
   - [ ] git tag -s -u 68666A7A -m "release Tahoe-LAFS-X.Y.Z" tahoe-lafs-X.Y.Z
      XXX should use full key-id above
+  - [ ] build code locally:
+     tox -e py27,codechecks,coverage,deprecations,docs,integration,upcoming-deprecations
+  - [ ] release version is reporting itself as intended version
+  - [ ] created tarballs (they'll be in dist/ for later comparison)
+     tox -e tarballs
+  - [ ] 'git pull' doesn't pull anything
   - [ ] pushed tag to trigger buildslaves: git push official master TAGNAME
 
 * sign the release artifacts [0/8]
@@ -82,7 +83,7 @@
   - [ ] make an "announcement of new release" on freshmeat (XXX still a thing?)
   - [ ] make an "announcement of new release" on launchpad
   - [ ] tweeted as @tahoelafs
-  - [ ] emailed signed relnotes.txt to below listed mailing-lists/organizations
+  - [ ] emailed relnotes.txt.asc to below listed mailing-lists/organizations
   - [ ] also announce release to (trimmed from previous version of this doc):
       - twisted-python@twistedmatrix.com
       - liberationtech@lists.stanford.edu
