--- a/docs/how_to_make_a_tahoe-lafs_release.org
+++ b/docs/how_to_make_a_tahoe-lafs_release.org
@@ -33,6 +33,8 @@
   - [ ] 'git pull' doesn't pull anything
   - [ ] pushed tag to trigger buildslaves
      git push official master TAGNAME
+  - [ ] confirmed Dockerhub built successfully:
+     https://hub.docker.com/r/tahoelafs/base/builds/
 
 * sign the release artifacts [0/8]
 
